--- a/question_answering/api/Dockerfile
+++ b/question_answering/api/Dockerfile
@@ -19,6 +19,7 @@ RUN rm -rf /var/lib/apt/lists/*
 COPY . .
 RUN python3 -m pip install --upgrade pip
 RUN pip3 install -r requirements.txt
+RUN pip3 install torch==1.7.1+cpu torchvision==0.8.2+cpu torchaudio===0.7.2 -f https://download.pytorch.org/whl/torch_stable.html
 
 ARG DOWNLOAD_MODEL
 
