--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,139 @@
-google-api-python-client==1.8.3
-google-cloud-storage==1.29.0
-simpletransformers==0.51.3
+alembic==1.5.4
+altair==4.1.0
+amqp==2.6.1
+argon2-cffi==20.1.0
+astor==0.8.1
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+base58==2.1.0
+billiard==3.6.3.0
+bleach==3.3.0
+blinker==1.4
+cachetools==4.2.1
 celery==4.4.0
-plac==1.3.1
-flask==1.1.2
-flask_cors==3.0.10
-python-decouple==3.4
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+configparser==5.0.1
+dataclasses==0.8
+decorator==4.4.2
+defusedxml==0.6.0
 django-environ==0.4.5
+docker-pycreds==0.4.0
+entrypoints==0.3
+filelock==3.0.12
+Flask==1.1.2
+Flask-Cors==3.0.10
+Flask-Migrate==2.6.0
+Flask-SQLAlchemy==2.4.4
+gitdb==4.0.5
+GitPython==3.1.13
+google-api-core==1.26.0
+google-api-python-client==1.8.3
+google-auth==1.26.1
+google-auth-httplib2==0.0.4
+google-cloud-core==1.6.0
+google-cloud-storage==1.29.0
+google-resumable-media==0.5.1
+googleapis-common-protos==1.52.0
+httplib2==0.19.0
+idna==2.10
+importlib-metadata==3.4.0
+ipykernel==5.4.3
+ipython==7.16.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+itsdangerous==1.1.0
+jedi==0.18.0
+Jinja2==2.11.3
+joblib==1.0.1
+jsonschema==3.2.0
+jupyter-client==6.1.11
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kombu==4.6.11
+Mako==1.1.4
+MarkupSafe==1.1.1
+mistune==0.8.4
+nbclient==0.5.2
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+notebook==6.2.0
+numpy==1.19.5
+packaging==20.9
+pandas==1.1.5
+pandocfilters==1.4.3
+parso==0.8.1
+pathtools==0.1.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.1.0
+pkg-resources==0.0.0
+plac==1.3.1
+prometheus-client==0.9.0
+promise==2.3
+prompt-toolkit==3.0.16
+protobuf==3.14.0
+psutil==5.8.0
+psycopg2-binary==2.8.6
+ptyprocess==0.7.0
+pyarrow==3.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pydeck==0.6.1
+Pygments==2.8.0
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+python-decouple==3.4
+python-editor==1.0.4
+pytz==2021.1
+PyYAML==5.4.1
+pyzmq==22.0.3
+regex==2020.11.13
+requests==2.25.1
+rsa==4.7.1
+sacremoses==0.0.43
+scikit-learn==0.24.1
+scipy==1.5.4
+Send2Trash==1.5.0
+sentencepiece==0.1.95
+sentry-sdk==0.20.2
+seqeval==1.2.2
+shortuuid==1.0.1
+simpletransformers==0.51.3
+six==1.15.0
+smmap==3.0.5
+SQLAlchemy==1.3.23
+streamlit==0.76.0
+subprocess32==3.5.4
+tensorboardX==2.1
+terminado==0.9.2
+testpath==0.4.4
+threadpoolctl==2.1.0
+tokenizers==0.10.1
+toml==0.10.2
+toolz==0.11.1
+torch==1.7.1
+tornado==6.1
+tqdm==4.56.2
+traitlets==4.3.3
+transformers==4.3.2
+typing-extensions==3.7.4.3
+tzlocal==2.1
+uritemplate==3.0.1
+urllib3==1.26.3
+validators==0.18.2
+vine==1.3.0
+wandb==0.10.19
+watchdog==2.0.0
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+zipp==3.4.0
