--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ simpletransformers==0.51.3
 django-environ==0.4.5
 redis==3.4.1
 git+https://github.com/bothub-it/bothub-nlp-celery.git@0.1.32
+git+https://github.com/bothub-it/bothub-backend.git@1.0.16
