--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 simpletransformers==0.51.3
 django-environ==0.4.5
 redis==3.4.1
-git+https://github.com/bothub-it/bothub-nlp-celery.git@0.1.33
+git+https://github.com/bothub-it/bothub-nlp-celery.git@develop-0.1.37
 git+https://github.com/bothub-it/bothub-backend.git@1.0.16
+gevent==1.4.0
